--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@deidee/deflex",
-  "version": "1.1.5",
-  "description": "Stramien voor stijlbladen van deidee. Op basis van het flexboxmodel.",
+  "version": "2.0.0",
+  "description": "Stramien voor stijlbladen van @deidee. Op basis van het flexboxmodel.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,9 +24,10 @@
   },
   "homepage": "https://github.com/deidee/deflex#readme",
   "dependencies": {
-    "gulp": "^4.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp": "^4.0.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "node-sass": "^6.0.1"
   }
 }
