--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deidee/deflex",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "Stramien voor stijlbladen van @deidee. Op basis van het flexboxmodel.",
   "main": "index.js",
   "scripts": {
@@ -26,8 +26,8 @@
   "dependencies": {
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "node-sass": "^6.0.1"
+    "sass": "^1.47.0"
   }
 }
